--- a/ifs-data-layer/ifs-data-service/build.gradle
+++ b/ifs-data-layer/ifs-data-service/build.gradle
@@ -47,6 +47,7 @@ createContainer.enabled = enabled
 deploy.enabled =enabled
 wait.enabled = enabled
 deploy.dependsOn ":docker:ifs-mysql:ifs-database:deploy"
+createContainer.portBindings = ['9006:8000']
 
 
 List<String> networkAliases = new ArrayList<>()
