--- a/ifs-web-service/ifs-application-service/build.gradle
+++ b/ifs-web-service/ifs-application-service/build.gradle
@@ -14,6 +14,7 @@ osStageLocal.tag = applicationServiceVersion
 createContainer.hostName="application-svc"
 createContainer.containerName="application-svc"
 createContainer.containerId="application-svc"
+createContainer.portBindings = ['9001:8000']
 
 def enabled = project.hasProperty('ifs.application-service.enabled') ? project.property('ifs.application-service.enabled').toBoolean() : true
 stop.enabled = enabled
@@ -22,6 +23,7 @@ buildDocker.enabled = enabled
 createContainer.enabled = enabled
 deploy.enabled =enabled
 wait.enabled = enabled
+
 
 dependencies {
     compile project(':ifs-web-service:ifs-web-core')
