--- a/ifs-web-service/ifs-assessment-service/build.gradle
+++ b/ifs-web-service/ifs-assessment-service/build.gradle
@@ -11,6 +11,7 @@ osStageLocal.tag = assessmentServiceVersion
 createContainer.hostName="assessment-svc"
 createContainer.containerName="assessment-svc"
 createContainer.containerId="assessment-svc"
+createContainer.portBindings = ['9002:8000']
 
 def enabled = project.hasProperty('ifs.assessment-service.enabled') ? project.property('ifs.assessment-service.enabled').toBoolean() : true
 stop.enabled = enabled
@@ -19,6 +20,7 @@ buildDocker.enabled = enabled
 createContainer.enabled = enabled
 deploy.enabled =enabled
 wait.enabled = enabled
+
 
 ext.serverContext = '/assessment'
 
