--- a/ifs-web-service/ifs-project-setup-mgt-service/build.gradle
+++ b/ifs-web-service/ifs-project-setup-mgt-service/build.gradle
@@ -7,6 +7,7 @@ osStageLocal.tag = projectSetupMgtServiceVersion
 createContainer.hostName="project-setup-mgt-svc"
 createContainer.containerName="project-setup-mgt-svc"
 createContainer.containerId="project-setup-mgt-svc"
+createContainer.portBindings = ['9004:8000']
 
 def enabled = project.hasProperty('ifs.project-setup-mgt-service.enabled') ? project.property('ifs.project-setup-mgt-service.enabled').toBoolean() : true
 stop.enabled = enabled
@@ -15,6 +16,7 @@ buildDocker.enabled = enabled
 createContainer.enabled = enabled
 deploy.enabled =enabled
 wait.enabled = enabled
+
 
 ext.serverContext = '/project-setup-management'
 
