--- a/ifs-data-layer/ifs-finance-data-service/build.gradle
+++ b/ifs-data-layer/ifs-finance-data-service/build.gradle
@@ -22,6 +22,7 @@ buildDocker.enabled = enabled
 createContainer.enabled = enabled
 deploy.enabled =enabled
 wait.enabled = enabled
+createContainer.portBindings = ['9012:8000']
 
 deploy.dependsOn ":docker:ifs-mysql:ifs-finance-database:deploy"
 
