--- a/ifs-web-service/ifs-competition-mgt-service/build.gradle
+++ b/ifs-web-service/ifs-competition-mgt-service/build.gradle
@@ -7,6 +7,7 @@ osStageLocal.tag = competitionMgtServiceVersion
 createContainer.hostName="competition-mgt-svc"
 createContainer.containerName="competition-mgt-svc"
 createContainer.containerId="competition-mgt-svc"
+createContainer.portBindings = ['9003:8000']
 
 def enabled = project.hasProperty('ifs.competition-mgt-service.enabled') ? project.property('ifs.competition-mgt-service.enabled').toBoolean() : true
 stop.enabled = enabled
@@ -15,6 +16,7 @@ buildDocker.enabled = enabled
 createContainer.enabled = enabled
 deploy.enabled =enabled
 wait.enabled = enabled
+
 
 ext.serverContext = '/management'
 
