--- a/ifs-web-service/ifs-project-setup-service/build.gradle
+++ b/ifs-web-service/ifs-project-setup-service/build.gradle
@@ -8,6 +8,7 @@ osStageLocal.tag = projectSetupServiceVersion
 createContainer.hostName="project-setup-svc"
 createContainer.containerName="project-setup-svc"
 createContainer.containerId="project-setup-svc"
+createContainer.portBindings = ['9005:8000']
 
 def enabled = project.hasProperty('ifs.project-setup-service.enabled') ? project.property('ifs.project-setup-service.enabled').toBoolean() : true
 stop.enabled = enabled
@@ -16,6 +17,7 @@ buildDocker.enabled = enabled
 createContainer.enabled = enabled
 deploy.enabled =enabled
 wait.enabled = enabled
+
 
 ext.serverContext = '/project-setup'
 
