IFS-2930 Removing MAINTAINER and openldap-clients dependency.

--- a/ifs-data-layer/ifs-data-service/src/main/docker/financedataservicesync/Dockerfile-financedataservicesync
+++ b/ifs-data-layer/ifs-data-service/src/main/docker/financedataservicesync/Dockerfile-financedataservicesync
@@ -1,4 +1,3 @@
 FROM alpine:3.7
-MAINTAINER Ben Outram <ben@hiveit.co.uk>
-RUN apk add --no-cache openldap-clients mysql-client curl
+RUN apk add --no-cache mysql-client curl
 COPY send-all-cost-totals.sh /
