IFS-2930 Finance data service sync docker image is now based on the innovateuk/mysql-client image which has also been updated to use debian:jessie-slim.

--- a/ifs-data-layer/ifs-data-service/finance-data-service-sync.gradle
+++ b/ifs-data-layer/ifs-data-service/finance-data-service-sync.gradle
@@ -17,6 +17,7 @@ buildscript {
 apply plugin: com.bmuschko.gradle.docker.DockerRemoteApiPlugin
 task financeDataServiceSyncEnv {
     dependsOn "build"
+    dependsOn ":docker:ifs-mysql-client:buildDocker"
 
     def inputDir = project.file("$project.buildDir/docker-finance-data-service-sync")
     doFirst {
