--- a/ifs-data-layer/ifs-data-service/src/main/docker/financedataservicesync/Dockerfile-financedataservicesync
+++ b/ifs-data-layer/ifs-data-service/src/main/docker/financedataservicesync/Dockerfile-financedataservicesync
@@ -1,3 +1,3 @@
-FROM alpine:3.7
-RUN apk add --no-cache mysql-client curl
+FROM innovateuk/mysql-client
+RUN apt-get install -yq curl
 COPY send-all-cost-totals.sh /
