removed maven central from build files

--- a/gradle-support/java-spring-boot.gradle
+++ b/gradle-support/java-spring-boot.gradle
@@ -82,7 +82,7 @@ dependencyManagement {
 
 repositories {
     maven { url "https://repo.spring.io/milestone" }
-    mavenCentral()
+    jcenter()
 }
 
 jar {
