--- a/ifs-auth-service/build.gradle
+++ b/ifs-auth-service/build.gradle
@@ -4,7 +4,7 @@ allprojects {
     buildscript {
 
         repositories {
-            mavenCentral()
+            jcenter()
         }
     }
 
@@ -20,7 +20,7 @@ subprojects {
 }
 
 buildscript {
-    repositories { mavenCentral() }
+    repositories { jcenter() }
 }
 
 def String spCertsVolume = 'ifs-sp-service/src/main/docker/certs'
