--- a/ifs-web-service/fractal.gradle
+++ b/ifs-web-service/fractal.gradle
@@ -4,7 +4,6 @@ buildscript {
 
 
     repositories {
-        mavenCentral()
         jcenter()
     }
 
@@ -16,42 +15,42 @@ buildscript {
 
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 // use fully qualified class name
 apply plugin: com.bmuschko.gradle.docker.DockerRemoteApiPlugin
 
 
-    task prepareFractalDockerInput {
+task prepareFractalDockerInput {
 
-        def inputDir = project.file("$project.buildDir/fractal")
-        inputDir.delete();
+    def inputDir = project.file("$project.buildDir/fractal")
+    inputDir.delete();
 
-        doFirst {
-            copy {
-                from file("ifs-web-core/src/main/resources/templates/fractal-components")
-                into file("${inputDir}/fractal-components")
-            }
-            copy {
-                from file("ifs-web-core/src/main/resources/static")
-                into file("${inputDir}/static")
-            }
-            copy {
-                from file("fractal.js")
-                into inputDir
-            }
-            copy {
-                from file("fractal")
-                into inputDir
-            }
+    doFirst {
+        copy {
+            from file("ifs-web-core/src/main/resources/templates/fractal-components")
+            into file("${inputDir}/fractal-components")
+        }
+        copy {
+            from file("ifs-web-core/src/main/resources/static")
+            into file("${inputDir}/static")
+        }
+        copy {
+            from file("fractal.js")
+            into inputDir
+        }
+        copy {
+            from file("fractal")
+            into inputDir
         }
     }
+}
 
-    task buildFractal(type: DockerBuildImage) {
-        dependsOn prepareFractalDockerInput
-        tag = "innovateuk/fractal:latest"
-        inputDir = project.file("$project.buildDir/fractal")
-    }
+task buildFractal(type: DockerBuildImage) {
+    dependsOn prepareFractalDockerInput
+    tag = "innovateuk/fractal:latest"
+    inputDir = project.file("$project.buildDir/fractal")
+}
 
 
