--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -412,7 +412,7 @@ PROJECT_SETUP_PROJECT_ADDRESS_CANNOT_BE_UPDATED_IF_GOL_GENERATED=You cannot chan
 PROJECT_SETUP_PROJECT_DETAILS_CANNOT_BE_SUBMITTED_IF_INCOMPLETE=All project details must be completed before submission.
 PROJECT_SETUP_PROJECT_DETAILS_ADDRESS_SEARCH_OR_TYPE_MANUALLY=Please search using a valid postcode or enter the address manually.
 PROJECT_SETUP_PROJECT_ID_IN_URL_MUST_MATCH_PROJECT_ID_IN_MONITORING_OFFICER_RESOURCE=The project id in the url must match the project id in the Monitoring Officer Resource request body.
-PROJECT_SETUP_PARTNER_PROJECT_LOCATION_CANNOT_BE_CHANGED_ONCE_MONITORING_OFFICER_HAS_BEEN_ASSIGNED=TODO CONTENT VERIFY You cannot change the partner project location because your monitoring officer is already assigned.
+PROJECT_SETUP_PARTNER_PROJECT_LOCATION_CANNOT_BE_CHANGED_ONCE_MONITORING_OFFICER_HAS_BEEN_ASSIGNED=You cannot change the partner's project location because we have already assigned a monitoring officer.
 PROJECT_SETUP_MONITORING_OFFICER_CANNOT_BE_ASSIGNED_UNTIL_PROJECT_DETAILS_SUBMITTED=A Monitoring Officer cannot be assigned to a Project until its Project Details have been submitted.
 PROJECT_SETUP_PROJECT_DETAILS_CANNOT_BE_UPDATED_IF_ALREADY_SUBMITTED=Project details cannot be updated if they are already submitted.
 PROJECT_CANNOT_BE_WITHDRAWN=You are unable to perform this action. The project cannot be withdrawn.
