--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -502,7 +502,8 @@ competition.setup.opening.date.not.able.to.save=Unable to save opening date.
 competition.setup.innovation.area.must.be.selected=Please choose one of the following sub categories of the innovation sector: {0}.
 competition.setup.autosave.should.be.completed=Section cannot be saved while a field is saved with the autosave function.
 competition.setup.autosave.funder.could.not.be.removed=Funder could not be removed.
-competition.setup.is.already.ready.to.open=Competition has already the status ready to open
+competition.setup.is.already.ready.to.open=The competition is already ready to open.
+competition.setup.not.ready.to.open=The competition is not ready to open yet. Please check all the sections are complete.
 competition.setup.invalid.assessor.count=Invalid number of assessors
 competition.setup.invalid.comp.exec=The selected user is not a Portfolio Manager.
 competition.setup.invalid.comp.technologist=The selected user is not an Innovation Lead
