--- a/ifs-data-layer/ifs-data-service/build.gradle
+++ b/ifs-data-layer/ifs-data-service/build.gradle
@@ -132,6 +132,7 @@ test {
     systemProperty 'pact.rootDir', project.getProperty('pactDir')
 
     finalizedBy asciidoctor
+    dependsOn ":docker:ifs-mysql:ifs-database:initDB"
 }
 
 asciidoctor {
