--- a/docker/ifs-mysql/build.gradle
+++ b/docker/ifs-mysql/build.gradle
@@ -37,20 +37,12 @@ subprojects {
 
     createContainer.cmd = cmd
 
-    createContainer.enabled = true
-    deploy.enabled = true
-    wait.enabled = true
-    stop.enabled = true
-    removeContainer.enabled = true
-
-    //TODO I think we can change our onlyIf's to enabled?
-
-    buildDocker.onlyIf { project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false }
-    stop.onlyIf { project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false }
-    removeContainer.onlyIf { project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false }
-    createContainer.onlyIf { project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false }
-    deploy.onlyIf { project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false }
-
+    buildDocker.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+    createContainer.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+    deploy.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+    wait.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+    stop.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+    removeContainer.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
 
 
 
