--- a/ifs-registration-service/build.gradle
+++ b/ifs-registration-service/build.gradle
@@ -74,10 +74,11 @@ createContainer.enabled = enabled
 deploy.enabled =enabled
 wait.enabled = enabled
 
-buildDocker.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
-stop.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
-removeContainer.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
-createContainer.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
-deploy.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+buildDocker.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+createContainer.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+deploy.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+wait.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+stop.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+removeContainer.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
 
 deploy.dependsOn ":ifs-auth-service:ifs-ldap-service:deploy"
