--- a/ifs-sil-stub/build.gradle
+++ b/ifs-sil-stub/build.gradle
@@ -70,8 +70,9 @@ createContainer.containerName="sil-stub"
 createContainer.containerId="sil-stub"
 createContainer.portBindings = ['8091:8080']
 
-buildDocker.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
-stop.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
-removeContainer.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
-createContainer.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
-deploy.onlyIf{project.hasProperty('initialise')? project.property('initialise').toBoolean() : false}
+buildDocker.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+createContainer.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+deploy.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+wait.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+stop.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+removeContainer.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
