--- a/ifs-web-service/ifs-web-core/.gitignore
+++ b/ifs-web-service/ifs-web-core/.gitignore
@@ -2,4 +2,4 @@ src/main/resources/static/css/ie7.css
 src/main/resources/static/css/ie8.css
 src/main/resources/static/css/ie9.css
 src/main/resources/static/css/screen.css
-src/main/resources/static/js/dest/ifs.min.js
+src/main/resources/static/js/dest/*
