--- a/ifs-auth-service/build.gradle
+++ b/ifs-auth-service/build.gradle
@@ -17,11 +17,10 @@ subprojects {
     buildDocker.inputDir=file("${project.buildDir}/docker")
     tagDocker.imageId="innovateuk/" + project.name.replaceAll(/ifs-/, "") + ":latest"
 
-    createContainer.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
-    deploy.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
-    wait.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
-    stop.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
-    removeContainer.enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+    def enabled = project.hasProperty('initialise') ? project.property('initialise').toBoolean() : false
+    [stop, removeContainer, createContainer, deploy, wait].each { task ->
+        task.enabled = enabled
+    }
 
 }
 
