--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ apply from: "gradle-support/versions.gradle"
 apply from: "gradle-support/sonarqube.gradle"
 apply from: "gradle-support/release.gradle"
 
+if (project.hasProperty('ifs.zipkin.enabled') ? project.property('ifs.zipkin.enabled').toBoolean() : false) {
+    apply from: "gradle-support/zipkin.gradle"
+}
+
 allprojects {
     group 'innovateuk'
     version project.version
