--- a/ifs-web-service/front-end.gradle
+++ b/ifs-web-service/front-end.gradle
@@ -1,11 +1,15 @@
 apply plugin: "java"
+apply plugin: "com.moowork.node"
 apply plugin: 'com.moowork.gulp'
+
+// Download and install a local node/npm version.
+gulp_default.dependsOn 'nodeSetup'
+
+// Install node packages from package.json before running gulp build
+gulp_default.dependsOn 'npmInstall'
 
 // makes sure on each build that gulp is installed
 gulp_default.dependsOn 'installGulp'
-
-// processes your package.json before running gulp build
-gulp_default.dependsOn 'npmInstall'
 
 def srcDir = new File(projectDir, "src/main/resources/static")
 def targetDir = new File(project.buildDir, "resources/main/static")
@@ -14,13 +18,39 @@ gulp_default.outputs.dir targetDir
 
 processResources.dependsOn gulp_default
 
+node {
+    // Version of node to use.
+    version = '8.11.1'
+
+    // Version of npm to use.
+    npmVersion = '5.6.0'
+
+    // Version of Yarn to use.
+    yarnVersion = '1.5.1'
+
+    // Base URL for fetching node distributions (change if you have a mirror).
+    distBaseUrl = 'https://nodejs.org/dist'
+
+    // If true, it will download node using above parameters.
+    // If false, it will try to use globally installed node.
+    download = true
+
+    // Set the work directory for unpacking node
+    workDir = file("${project.buildDir}/nodejs")
+
+    // Set the work directory for NPM
+    npmWorkDir = file("${project.buildDir}/npm")
+
+    // Set the work directory for Yarn
+    yarnWorkDir = file("${project.buildDir}/yarn")
+
+    // Set the work directory where node_modules should be located
+    nodeModulesDir = file("${project.projectDir}")
+}
+
 gulp {
     // Set the directory where gulpfile.js should be found
     workDir = file("${project.projectDir}")
-
     // Whether colors should output on the terminal
     colors = true
-
-    // Whether output from Gulp should be buffered - useful when running tasks in parallel
-    bufferOutput = false
 }
