--- a/docker/ifs-mysql/ifs-finance-database/build.gradle
+++ b/docker/ifs-mysql/ifs-finance-database/build.gradle
@@ -5,14 +5,10 @@ List<String> env = new ArrayList();
 env.add("MYSQL_ROOT_PASSWORD=password")
 env.add("MYSQL_DATABASE=ifs_finance")
 
-List<String> cmd = new ArrayList<>();
-cmd.add("--character-set-server=utf8, --collation-server=utf8_bin")
-
-
 createContainer.containerName = "ifs-finance-database"
 createContainer.containerId = "ifs-finance-database"
 createContainer.env= env
-createContainer.cmd = cmd
+createContainer.cmd = ["--character-set-server=utf8, --collation-server=utf8_bin"]
 createContainer.portBindings = ['3307:3306']
 createContainer.hostName="ifs-finance-database"
 
