--- a/ifs-auth-service/ifs-sp-service/build.gradle
+++ b/ifs-auth-service/ifs-sp-service/build.gradle
@@ -55,21 +55,9 @@ osStageRemote.tag = spVersion
 tagDockerLocal.tag = spVersion
 osStageLocal.tag = spVersion
 
-List<String> env = new ArrayList()
-env.add("SP_DOMAIN=ifs.local-dev")
-env.add("IDP_DOMAIN=auth.local-dev:9443")
-env.add("HTTPS_PORT=443")
-env.add("HTTP_PORT=80")
-
-
-List<String> networkAliases = new ArrayList<>()
-networkAliases.add("ifs.local-dev")
-
-
-
 createContainer.containerName = "shib"
 createContainer.containerId = "shib"
-createContainer.env= env
-createContainer.networkAliases=networkAliases
+createContainer.env= ["SP_DOMAIN=ifs.local-dev","IDP_DOMAIN=auth.local-dev:9443","HTTPS_PORT=443","HTTP_PORT=80"]
+createContainer.networkAliases=["ifs.local-dev"]
 createContainer.portBindings = ['443:443']
 createContainer.hostName="shib"
