--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -116,7 +116,7 @@ validation.standard.addressline1.required=The address cannot be blank.
 validation.standard.town.required=The town cannot be blank.
 validation.standard.postcodesearch.required=Please enter a valid postcode.
 validation.standard.postcode.required=The postcode cannot be blank.
-validation.standard.postcode.length=The postcode must be less than {2} characters long.
+validation.standard.postcode.length=The postcode should not exceed {1} characters.
 validation.standard.postcodeinput.required=Please enter a UK postcode.
 validation.standard.postcodeoptions.required=Please select an address or enter the address manually.
 
