--- a/docker/ifs-mysql/ifs-database/build.gradle
+++ b/docker/ifs-mysql/ifs-database/build.gradle
@@ -1,14 +1,10 @@
 ext.sqlContainer = "ifs-database"
 ext.testSchema = "ifs_test"
 
-List<String> env = new ArrayList();
-env.add("MYSQL_ROOT_PASSWORD=password")
-env.add("MYSQL_DATABASE=ifs")
-
 
 createContainer.containerName = "ifs-database"
 createContainer.containerId = "ifs-database"
-createContainer.env= env
+createContainer.env = ["MYSQL_ROOT_PASSWORD=password","MYSQL_DATABASE=ifs" ]
 createContainer.cmd = ["--character-set-server=utf8, --collation-server=utf8_bin"]
 createContainer.portBindings = ['3306:3306']
-createContainer.hostName="ifs-database"
+createContainer.hostName = "ifs-database"
