--- a/docker/ifs-mysql/ifs-finance-database/build.gradle
+++ b/docker/ifs-mysql/ifs-finance-database/build.gradle
@@ -1,13 +1,10 @@
 ext.sqlContainer = "ifs-finance-database"
 ext.testSchema = "ifs_finance_test"
 
-List<String> env = new ArrayList();
-env.add("MYSQL_ROOT_PASSWORD=password")
-env.add("MYSQL_DATABASE=ifs_finance")
 
 createContainer.containerName = "ifs-finance-database"
 createContainer.containerId = "ifs-finance-database"
-createContainer.env= env
+createContainer.env = ["MYSQL_ROOT_PASSWORD=password", "MYSQL_DATABASE=ifs_finance"]
 createContainer.cmd = ["--character-set-server=utf8, --collation-server=utf8_bin"]
 createContainer.portBindings = ['3307:3306']
-createContainer.hostName="ifs-finance-database"
+createContainer.hostName = "ifs-finance-database"
