IFS-3341 - using inputs and outputs to make tasks have incremental build support

--- a/gradle-support/openshift-build.gradle
+++ b/gradle-support/openshift-build.gradle
@@ -13,6 +13,8 @@ buildscript {
 }
 
 task buildDocker(type: DockerBuildImage) {
+    def arbitraryOutput = file("${project.buildDir}/buildDockerRan")
+    outputs.file(arbitraryOutput)
     tag = "innovateuk/${project.name.replaceAll(/ifs-/, "")}"
     inputDir = project.projectDir
 }
