IFS-3341 - ensuring changed jar taken into account

--- a/gradle-support/java-spring-boot.gradle
+++ b/gradle-support/java-spring-boot.gradle
@@ -57,6 +57,9 @@ springBoot {
 }
 
 bootRepackage {
+    def arbitraryOutput = file("${project.buildDir}/buildDockerRan")
+    outputs.file(arbitraryOutput)
+
     mainClass = 'org.innovateuk.ifs.Application'
     //    excludeDevtools = !(project.hasProperty('cloud') && cloud == 'development');
 
