IFS-3341 - changing name of arbitrary output

--- a/gradle-support/java-spring-boot.gradle
+++ b/gradle-support/java-spring-boot.gradle
@@ -57,7 +57,7 @@ springBoot {
 }
 
 bootRepackage {
-    def arbitraryOutput = file("${project.buildDir}/buildDockerRan")
+    def arbitraryOutput = file("${project.buildDir}/bootRepackageRan")
     outputs.file(arbitraryOutput)
 
     mainClass = 'org.innovateuk.ifs.Application'
