IFS-3338 Add images to gitignore excluding ifs-images

--- a/ifs-web-service/ifs-web-core/.gitignore
+++ b/ifs-web-service/ifs-web-core/.gitignore
@@ -3,3 +3,7 @@ src/main/resources/static/css/ie8.css
 src/main/resources/static/css/ie9.css
 src/main/resources/static/css/screen.css
 src/main/resources/static/js/dest/*
+src/main/resources/static/images/*
+!src/main/resources/static/images/ifs-images
+!src/main/resources/static/images/ifs-images/*
+.DS_Store
