--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ version=1.1.37-SNAPSHOT
 
 #application-service.version=1.1.23-APPLICATION-VERSION
 #front-door-service.version=1.1.23-FRONT-DOOR-VERSION
-#assessment-service.version=1.1.23-ASSESSMENT-VERSION
+assessment-service.version=1.1.37-RELEASE
 #competition-mgt-service.version=1.1.23-COMPETITION-MGT-VERSION
 #project-setup-mgt-service.version=1.1.23-PROJECT-SETUP-MGT-VERSION
 #project-setup-service.version=1.1.23-PROJECT-SETUP-VERSION
