first attempt at new task to start db container if not started

--- a/docker/ifs-mysql/build.gradle
+++ b/docker/ifs-mysql/build.gradle
@@ -1,3 +1,5 @@
+import org.innovateuk.ifs.tasks.StartDbContainerIfNotStartedTask
+
 subprojects {
 
     def sqlVersion = "5.6.29"
@@ -42,18 +44,20 @@ subprojects {
         }
     }
 
+    task startDbIfNotStarted(type: StartDbContainerIfNotStartedTask) {
+
+    }
 
 
     task initDB {
         createTestSchema.mustRunAfter wait
+        wait.mustRunAfter startDbIfNotStarted
+        dependsOn startDbIfNotStarted
         dependsOn wait
         dependsOn createTestSchema
     }
 
 }
-
-
-
 
 
 
